# avataa-search

./: .env.example  .gitignore  README.md  compose.yaml  pyproject.toml  pytest.ini  supervisord.conf
app/: exceptions.py  init_app.py  localization.py  main.py  run_grpc.py  run_kafka_cons.py  run_kafka_cons_zeebe.py  search_functions.py  utils.py
app/common_utils/dto_models/: models.py
app/common_utils/features/: utils.py
app/elastic/: ca.crt  client.py  config.py  enum_models.py  pydantic_models.py  utils.py
app/grpc_server/: server.py
app/grpc_server/group_router/: handler.py
app/grpc_server/mo_finder/: handler.py
app/indexes_mapping/inventory/: mapping.py  zeebe_enums.py
app/kafka_config/: README.md  config.py  protobuf_consumer.py  utils.py
app/kafka_config/msg/: mo_msg.py  prm_msg.py  tmo_msg.py  tprm_msg.py
app/kafka_config/protobuf/: inventory_instances_pb2.pyi
app/locales/: de.json  en.json  ru.json  uk.json
app/routers/: inventory.py
app/security/: security_config.py  security_data_models.py  security_factory.py  security_interface.py
app/security/data/: utils.py
app/security/implementation/: disabled.py  keycloak.py  mixed.py  opa.py
app/security/kafka/: listener.py  models.py  utils.py
app/services/: auth.py  hierarchy.py  inventory.py  loader.py  utils.py
app/services/group_builder/: models.py
app/services/inventory_services/: models.py  response_models.py
app/services/kafka_services/: kafka_connection_utils.py
app/settings/: config.py
app/v2/: main.py
tests/: .gitignore  conftest.py
tests/kafka/: utils.py
(+359 files in other folders)
